deployments/istio/staging/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-secondary
      protocol: HTTPS
    hosts:
    - "grafana-stg.tomota.vn"
    tls:
      credentialName: cert-grafana-stg.tomota.vn
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  hosts:
  - "grafana-stg.tomota.vn"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: grafana
        port:
          number: 80
